--- a/my-project/src/index.css
+++ b/my-project/src/index.css
@@ -1,4 +1,11 @@
 @tailwind base;
-  @tailwind components;
-  @tailwind utilities;
+@tailwind components;
+@tailwind utilities;
   
+*{
+  font-family: "Helvetica";
+}
+
+.home{
+  background-image: url('./../public/home-logo.png');
+}
